Update to run with latest codebase
- Switched to my fork of tessera, on master
- Use the scripts in `script/` dir for build and server

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,9 +2,9 @@
 nodaemon = true
 
 [program:tessera]
-directory = /src/tessera
+directory = /src/tessera/tessera-server
 environment = TESSERA_CONFIG='/var/lib/tessera/config.py'
-command = /usr/bin/gunicorn -b0.0.0.0:80 -w2 tessera:app
+command = /src/tessera/script/server
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
