Simplify the image to build with the latest release out of PyPi

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,9 +2,9 @@
 nodaemon = true
 
 [program:tessera]
-directory = /src/tessera/tessera-server
+# directory = /src/tessera/tessera-server
 environment = TESSERA_CONFIG='/var/lib/tessera/config.py'
-command = /src/tessera/script/server
+command = tessera
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
